--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="topbar__inner">
                     <a href="#" class="topbar__logo">
-                        <img src="images/logo.svg" alt="logo">
+                        <img src="images/Logo.png" alt="logo">
                     </a>
                     <ul class="topbar__register">
                         <li class="topbar__register-item">
@@ -114,7 +114,7 @@
                     <div class="myproduct__inner">
                         <div class="myproduct__item">
                             <a href="product.html" class="myproduct__logo">
-                                <img src="images/logo2.svg" alt="logo2">
+                                <img src="images/logo.png" alt="logo2">
                             </a>
                             <a href="product.html" class="myproduct__card">
                                 <img src="images/NyanCat.png" alt="NyanCat" class="myproduct__img">
@@ -144,7 +144,7 @@
                         </div>
                         <div class="myproduct__item">
                             <a href="product.html" class="myproduct__logo">
-                                <img src="images/logo2.svg" alt="logo2">
+                                <img src="images/logo.png" alt="logo2">
                             </a>
                             <a href="product.html" class="myproduct__card">
                                 <img src="images/NyanCat.png" alt="NyanCat" class="myproduct__img">
@@ -174,7 +174,7 @@
                         </div>
                       <div class="myproduct__item ">
                                       <a href="product.html " class="myproduct__logo ">
-                                      <img src="images/logo2.svg " alt="logo2 ">
+                                      <img src="images/logo.png " alt="logo2 ">
                                       </a>
                                       <a href="product.html " class="myproduct__card ">
                                       <img src="images/NyanCat.png " alt="NyanCat " class="myproduct__img ">
