--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="topbar__inner">
                     <a href="#" class="topbar__logo">
-                        <img src="images/logo.svg" alt="logo">
+                        <img src="images/Logo.png" alt="logo">
                     </a>
                     <ul class="topbar__register">
                         <li class="topbar__register-item">
