--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         </div>
                       <div class="myproduct__item ">
                                       <a href="product.html " class="myproduct__logo ">
-                                      <img src="iimages/Logo.png " alt="logo2 ">
+                                      <img src="images/Logo.png " alt="logo2 ">
                                       </a>
                                       <a href="product.html " class="myproduct__card ">
                                       <img src="images/NyanCat.png " alt="NyanCat " class="myproduct__img ">
